# zkwasm-browser-app

./: package-lock.json  package.json
gameplay/: Cargo.toml  Makefile  hostapi.js
gameplay/src/: lib.rs  stdpack.rs
gameplay/src/character/: mod.rs  status.rs
gameplay/src/items/: mod.rs
gameplay/src/rule_engine/: mod.rs
gameplay/src/skills/: mod.rs
gameplay/src/utils/: mod.rs
public/spine_assets/fish-spine/: character.atlas  character.json
src/components/: Status.tsx  style.scss
src/components/ActiveItem/: index.tsx  style.scss
src/components/ChangeInstance/: index.tsx  style.scss
src/components/ConfirmSuicide/: index.tsx  style.scss
src/components/EquippedItem/: index.tsx
src/components/Events/: index.tsx  style.scss
src/components/GameOver/: index.tsx  style.scss
src/components/HistorySummary/: index.tsx  style.scss
src/components/Inventory/: index.tsx  style.scss
src/components/ItemDrop/: index.tsx  style.scss
src/components/ItemMain/: index.tsx  style.scss
src/components/SpineCanvas/: index.tsx
src/data/: endpoint.ts  gameplay.ts  images.ts
src/js/: game.js  game.wasm  gameplay.d.ts  gameplay.wasm  gameplay.wasm_bg.js  hostapi.js
src/js/tests/: README.md  sha256test.js
src/layout/: Main.tsx  style.scss
src/modals/: addNewProveTask.tsx
src/types/: game.ts  layout.ts
src/utils/: game.ts
